Added endpoints for questions and categories
