# server/api/controllers/categories/controller.ts
@@ -3,32 +3,32 @@ import { Request, Response } from 'express';
 
 export class Controller {
   all(req: Request, res: Response): void {
-    DbService.getAllQuestions().then(r => res.json(r));
+    DbService.getAllCategories().then(r => res.json(r));
   }
 
   create(req: Request, res: Response): void {
-    DbService.createQuestion(req.body).then(r =>
+    DbService.createCategory(req.body).then(r =>
       res
         .status(201)
-        .location(`/api/v1/questions/${r}`)
+        .location(`/api/v1/categories/${r}`)
         .json(r),
     );
   }
 
   update(req: Request, res: Response): void {
-    DbService.updateQuestion(req.body).then(r =>
+    DbService.updateCategory(req.body).then(r =>
       res
         .status(201)
-        .location(`/api/v1/questions/${r}`)
+        .location(`/api/v1/categories/${r}`)
         .json(r),
     );
   }
 
   delete(req: Request, res: Response): void {
-    DbService.deleteQuestion(req.body.id).then(r =>
+    DbService.deleteCategory(req.body.id).then(r =>
       res
         .status(201)
-        .location(`/api/v1/questions/${r}`)
+        .location(`/api/v1/categories/${r}`)
         .json(r),
     );
   }
